# PYLLR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: pav_rocch.py
examples/interspeech2021/: README.txt  calibration_fusion_example.py  final_plots.py
pyllr/: __init__.py  bayes_error_rate.py  calibration.py  cllr.py  pav_rocch.py  plotting.py  quick_eval.py  utils.py
