[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyllr"
version = "0.0.2"
authors = [
  { name="Niko Brummer", email="niko.brummer@gmail.com" },
]
description = "Python package for the log-likelihood-ratio"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "matplotlib", "numpy", "scipy", "scikit-learn" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bsxfan/PYLLR"
"Bug Tracker" = "https://github.com/bsxfan/PYLLR/issues"
